
{{$NEXT}}

1.20140711 2014-07-10 America/Los_Angeles

 - Store/SQL: use full sql name in WHERE clause
 - DMARC/HTTP: added error handling and tests
 - removed excess comma in mail_dmarc_schema.mysql
 - added quotes around ($commit || ''), just in case
 - try IMAP fetch without SORT if no results, for IMAP servers like Gmail that don't support SORT
 - warn but still pass test if DNS query fails

1.20140623 2014-06-23 America/Los_Angeles

 - updated tests to accomodate the cached PSL

1.20140622 2014-06-22 America/Los_Angeles

 - load PSL into hash to speed subsequent lookups (esp for daemon)
 - uncommented Net::Server in Prereqs/Recommended section
 - added INSTALL
 - updated dmarc_httpd description to note validation feature
 - updated public_suffix_list

1.20140210 2014-02-09 America/Los_Angeles

 - NEW FEATURE: added HTTP validation service (see dmarc_httpd)
 - install_deps: install optional prereqs by default
 - added Best Current Practices link on main page
 - minor tweaks to Pod (Ricardo Signes)
 - PurePerl: added comments about Sender header
    when message has multiple-address format used in the From header
 - updated public_suffix_list

1.20130906 2013-09-06 America/Los_Angeles

 - handle errors encountered when reporting address is illegal
 - delete reports that return a SMTP 5XX code for the recipient
 - delete reports after encountering 12 errors
 - added 'too big' notices when report size exceeds limit
 - updated install_deps.pl

1.20130625 2013-06-24 America/Los_Angeles

 - added a bunch of tests from http://dmarc-qa.com
 - URI: supress undef error if URI scheme not defined
 - policy->parse: properly parse records with unnecessary trailing ;
 - reporting is 'external' based on Org Domain (was email domain)

1.20130616 2013-06-16 America/Los_Angeles

 - combined update/replace SQL methods
 - dmarc_view_reports: fix duplicated variable name

1.20130615 2013-06-15 America/Los_Angeles

 - bug fixes and purge unused classes
